# Anti-Emulator

app/: CMakeLists.txt  build.gradle
app/src/main/cpp/: AndroidSysInfo.cpp  AndroidSysInfo.h  hook_egl.cpp  native-lib.cpp
app/src/main/java/com/qtfreet/anticheckemulator/: MainActivity.java
app/src/main/java/com/qtfreet/anticheckemulator/emulator/: JniAnti.java
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
